finamer/qa/plataforma/elasticsearch/yaml/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.8.2
          ports:
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elastic
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic
  annotations:
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Host: $host
      X-Forwarded-For: $proxy_add_x_forwarded_for
      X-Forwarded-Host: $host
      X-Forwarded-Port: $server_port
      X-Forwarded-Proto: $scheme
    nginx.ingress.kubernetes.io/enable-websockets: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: kibana
      port:
        number: 5601
  rules:
  -  host: kibanaqa.tailorw.net
     http:
       paths:
       -  pathType: Prefix
          path: "/"
          backend:
            service:
              name: kibana
              port:
                number: 5601
